@@ -4,7 +4,7 @@
  * See the main source file 'xineliboutput.c' for copyright information and
  * how to reach the author.
  *
- * $Id: xine_input_vdr_net.h,v 1.15 2010-03-13 11:33:36 phintuka Exp $
+ * $Id: xine_input_vdr_net.h,v 1.16 2010-07-19 13:39:24 phintuka Exp $
  *
  */
 
@@ -12,7 +12,7 @@
 #define __XINE_INPUT_VDR_NET_H_
 
 #include <arpa/inet.h>
-#ifdef __APPLE__
+#if defined(__APPLE__) || defined(__FreeBSD__)
 # include <machine/endian.h>
 #else
 # include <endian.h>
